# isometric-game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresents.json  Makefile  README.md  save.json
assets/: mobile_spritesheet.json  mousemap.xcf  movable_sprite.xcf  moveable_sprite_tall.xcf  spritesheet.json  spritesheet.xcf  tall_tile.xcf  taller_tile.xcf  tallest_tile.xcf  tile.xcf
assets/kenney_isometric-buildings-1/Spritesheet/: buildingTiles_sheet.xml
assets/kenney_isometric-city/Spritesheet/: cityTiles_sheet.xml
assets/kenney_isometric-vehicles-1/Spritesheet/: sheet_allCars.xml
prototypes/: save_file_checker.py
prototypes/graph/: components.py  constants.py  geometry.py  registry.py  systems.py  test.py  tilemap.py  utils.py
prototypes/tests/: test_graph.py
src/: main.cpp
src/components/: sprite.h  transform.h
src/engine/: archive.cpp  archive.h  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  classic_challenge.md  constants.h  directions.cpp  directions.h  game.cpp  game.h  geometry.h  grid.h  iso_utility.cpp  iso_utility.h  json_parse.cpp  json_parse.h  mouse.cpp  mouse.h  mouse_position.cpp  mouse_position.h  mousemap.cpp  mousemap.h  pathfinding.cpp  pathfinding.h  position.cpp  position.h  projection.h  render.cpp  render.h  scene.cpp  scene.h  sprite.cpp  sprite.h  spritemask.cpp  spritemask.h  spritesheet.cpp  spritesheet.h  tilemap.cpp  (+6 more)
src/engine/components/: building_component.h  building_pair_component.h  camera_component.h  connected_component.h  connections_component.h  connectivity_component.h  connectivity_update_flag.h  debug_component.h  flags.h  grid_position_component.h  highlight.h  highlight_component.h  highlighted_entity_component.h  junction_component.h  mouse_component.h  mouseover_component.h  navigation_component.cpp  navigation_component.h  origin_component.h  path_component.h  pending_destruction_component.h  render_offset_component.h  render_rect.h  rigid_body.h  road_access_component.h  screen_position_component.h  segment_component.h  segment_delete_flag.h  segment_manager_component.h  segment_member_component.h  selected_entity_component.h  spatialmap_component.cpp  spatialmap_component.h  spatialmapcell_component.h  spatialmapcell_span_component.h  sprite.h  sprite_component.cpp  sprite_component.h  tile_component.h  tilemap_component.cpp  (+8 more)
src/engine/systems/: bounding_box_render.h  building_system.cpp  building_system.h  camera_system.cpp  camera_system.h  entity_release_system.cpp  entity_release_system.h  graph_system.cpp  graph_system.h  imgui_render.h  junction_system.cpp  junction_system.h  mouse_system.cpp  mouse_system.h  movement.h  movement_system.cpp  movement_system.h  navigation_system.h  position_system.cpp  position_system.h  render.cpp  render.h  render_system.cpp  render_system.h  segment_system.cpp  segment_system.h  spatialmap_system.cpp  spatialmap_system.h  tilemap_system.cpp  tilemap_system.h  walker_system.cpp  walker_system.h
src/game/: camera.cpp  camera.h  constants.h  game.cpp  game.h  map.h  mouse.cpp  mouse.h  mousemap.cpp  mousemap.h  point.cpp  point.h  tilemap.cpp  tilemap.h
src/systems/: render.h
